# proto-graphql-rust

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: 2021-02-19-summary.md  2021-03-12-summary.md  README.md  book.toml  schema-conversion.md
docs/src/: SUMMARY.md  about.md  arci.md  rust-graphql.md  rust-grpc.md
docs/src/examples/: 02_helloworld.md
docs/src/schema-conversion/: 01_chapter.md  02_union_oneof.md  03_union_input.md  04_empty.md  05_scalar.md  06_namespace.md  _07_streaming.md
examples/federation/: Cargo.toml  README.md  build.rs  start.sh
examples/federation/gateway/: index.js  package.json
examples/federation/graphql/: graphql-accounts.federation.graphql  graphql-accounts.graphql  graphql-gateway.graphql  graphql-products.federation.graphql  graphql-products.graphql  graphql-reviews.federation.graphql  graphql-reviews.graphql
examples/federation/proto/: accounts.proto  products.proto  reviews.proto
examples/federation/src/: lib.rs
examples/simple/: Cargo.toml  README.md  build.rs  start.sh
examples/simple/graphql/: simple-graphql-gateway.graphql
examples/subscription/: Cargo.toml  README.md  build.rs  start.sh
examples/subscription/graphql/: subscription-graphql-gateway.graphql
examples/subscription/proto/: subscription.proto
proto-graphql/: Cargo.toml
proto-graphql-build/: Cargo.toml
proto-graphql-build/src/: client.rs  gen.rs  lib.rs  prost.rs
proto-graphql/codegen/src/: main.rs
proto-graphql/src/: lib.rs  prost_types.rs
tools/: fmt.sh  gen.sh
tools/codegen/: Cargo.toml
tools/codegen/src/: main.rs
