[package]
name = "federation"
version = "0.1.0"
authors = ["Taiki Endo <te316e89@gmail.com>"]
edition = "2018"
publish = false

[build-dependencies]
proto-graphql-build = { path = "../../proto-graphql-build" }

[dependencies]
anyhow = "1"
async-graphql = "2"
async-graphql-warp = "2"
prost = "0.7"
proto-graphql = { path = "../../proto-graphql" }
tokio = { version = "1", features = ["full"] }
tonic = "0.4"
warp = "0.3"
