[package]
name = "federation"
version = "0.1.0"
authors = ["Taiki Endo <te316e89@gmail.com>"]
edition = "2018"
publish = false

[build-dependencies]
proto-graphql-build = { path = "../../proto-graphql-build" }

[dependencies]
async-graphql = "3"
async-graphql-warp = "2"
prost = "0.8"
proto-graphql = { path = "../../proto-graphql" }
tokio = { version = "1", features = ["full"] }
tonic = "0.5"
warp = "0.3"
