[package]
name = "subscription"
version = "0.1.0"
authors = ["Taiki Endo <te316e89@gmail.com>"]
edition = "2018"
publish = false

[build-dependencies]
proto-graphql-build = { path = "../../proto-graphql-build" }

[dependencies]
async-graphql = "2"
async-graphql-warp = "3"
async-stream = "0.3"
futures = "0.3"
prost = "0.8"
proto-graphql = { path = "../../proto-graphql" }
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.5"
warp = "0.3"
