[package]
name = "proto-graphql-internal-codegen"
version = "0.1.0"
authors = ["Taiki Endo <te316e89@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1"
fs = { package = "fs-err", version = "2" }
heck = "0.3"
proc-macro2 = "1"
proto-graphql-build = { version = "0.1", path = "../../proto-graphql-build" }
quote = "1"
reqwest = { version = "0.11", features = ["blocking"] }
syn = "1"
